search placement is fixed on mobile

--- a/src/searchButton/SearchButton.css
+++ b/src/searchButton/SearchButton.css
@@ -1,13 +1,13 @@
 .default{
   display: block;
-  width: max-content;
-  margin-left: 15px;
+  margin-left: 200px;
+  margin-right: 200px;
 }
 
 .active{
   display: block;
-  width: max-content;
-  margin-left: 15px;
+  margin-left: 200px;
+  margin-right: 200px;
 }
 
 .text-white{
@@ -20,6 +20,7 @@
   z-index: 1;
   width: 600px;
   height: 75%;
+  margin-left: 200px;
   background-color: rgb(90, 90, 90);
   overflow: auto;
   overflow-x: hidden;
@@ -33,4 +34,28 @@ input[type="text"] {
   font-size: 14pt;
   height: 30px;
   width: 600px;
+}
+
+@media only screen and (max-width: 620px) {
+
+  .default{
+    display: block;
+    margin: auto;
+  }
+  
+  .active{
+    display: block;
+    margin: auto;
+  }
+
+  .search-box{
+    display: block;
+    position: absolute;
+    z-index: 1;
+    background-color: rgb(90, 90, 90);
+    width: 100vw;
+    margin: auto;
+    overflow: auto;
+    overflow-x: hidden;
+  }
 }
